--- a/shutdown/lang/english.json
+++ b/shutdown/lang/english.json
@@ -1,6 +1,6 @@
 {
     "lang_name": "English",
-    "display.version": "Version 2.0\t\t\t         alba4k",
+    "display.version": "Version",
     "settings.title": "Settings",
     "settings.theme": "Theme",
     "settings.theme_desc": "Changes the theme\nbetween light and dark."
